--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -361,7 +361,7 @@ header{
 .footer-navigation-inner h3{
     font-family: 'Work Sans', sans-serif;
     font-size: medium;
-    font-weight: lighter;
+    font-weight: bolder;
 }
 .footer-navigation-inner a{
     color:#7a7177;
