--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -321,7 +321,8 @@ header{
 }
 .imagenes-lastdown{
     display:flex;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
     padding: 10vh 0 10vh;
 }
 .fecha{
@@ -346,6 +347,7 @@ header{
     font-size: small;
     font-weight: bolder;
 }
+
 .Prueba .footer-navigation-inner{
     background: fixed;
     background-color: #f5f5f5;  
@@ -590,7 +592,7 @@ height: auto;
 .imagenes-lastdown{
 display:flex;
 flex-direction: column;
-justify-content: center;
+justify-content: space-around;
 padding: 20vh 0;
 }
 .fecha{
@@ -636,4 +638,5 @@ align-items: center;
 display: flex;
 align-content: center;
 font-size: 0.9em;
+}
 }
